# pywigner

./: .gitlab-ci.yml  CITATION.cff  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pypi.yaml
