[project]
name = "pywigner"
version = "1.11"
description = "Wigner Symbols"
authors = [
    {name = "Håkan T. Johansson"},
    {name = "Christian Forssén"},
]
dependencies = [
    "cffi>=1.0.0",
    "numpy",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "GPLv3"}

[project.urls]
Homepage = "http://fy.chalmers.se/subatom/wigxjpf"

[build-system]
requires = [
    "setuptools",
    "pycparser"
]

[tool.setuptools]
setup_requires = ["numpy", "cffi>=1.0.0"]
cffi_modules = ["pywigxjpf/pywigxjpf_ffi_builder.py:ffibuilder"]